# Product-Locator

./: .gitignore  DEPLOY.md  DEPLOY_TR.md  LICENSE  README.md  README_TR.md  docker-compose.yml  mcp.json
.github/workflows/: ci.yml
backend/: ARCHITECTURE.md  ARCHITECTURE_TR.md  Dockerfile  README.md  README_TR.md  app.py  pyproject.toml  requirements.txt  test_api_endpoints.py
backend/core/interfaces/: scraper.py
backend/src/config/: limiter.py  settings.py  store_registry.py
backend/src/data/: stores.json
backend/src/middleware/: auth.py
backend/src/models/: manual_product.py  product.py  store.py  watchlist.py
backend/src/routes/: admin.py  export.py  scheduler.py  search.py  watchlist.py
backend/src/scraper/: base_scraper.py  factory.py
backend/src/scraper/stores/: __init__.py  mock_store.py
backend/src/services/: ai_parser.py  db_service.py  export_service.py  fallback_parser.py  redis_service.py  report_service.py  scheduler_service.py  search_orchestrator.py  search_service.py  store_service.py
backend/src/universal_agent/: agent.py  page_parser.py  search_engine.py
backend/tests/: conftest.py  test_5_categories.py  test_admin.py  test_ai_parser.py  test_api_endpoints.py  test_caching.py  test_city_match.py  test_export.py  test_fallback.py  test_rate_limit.py  test_scheduler.py  test_search.py  test_security.py  test_validation.py  test_watchlist.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
templates/: in_stock_alert.ftl  scraper_alert.ftl
(+12 files in other folders)
