[project]
name = "product-locator-backend"
version = "0.1.0"
description = "Product Locator Backend with AI-powered scraping"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "openai>=1.10.0",
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.0",
    "motor>=3.3.0", # MongoDB Async driver
    "slowapi>=0.1.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

